# querynomicon

./: CONTRIBUTING.md  Makefile  README.md  bibliography.md  common.mk  glossary.md  links.md  pyproject.toml
01_intro/: index.md
02_core/: index.md
03_tools/: index.md
04_advanced/: index.md
05_python/: index.md
06_r/: index.md
07_psql/: index.md
08_finale/: index.md
db/: work_job.db
docs/: bibliography.html  config.py  config.py.html  contributing.html  glossary.html  index.html  links.html
docs/01_intro/: index.html
docs/02_core/: index.html
docs/03_tools/: index.html
docs/04_advanced/: index.html
docs/05_python/: index.html
docs/06_r/: index.html
docs/07_psql/: index.html
docs/08_finale/: index.html
docs/advanced/: index.html
docs/author/: index.html
docs/bib/: index.html
docs/colophon/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/core/: index.html
docs/finale/: index.html
docs/glossary/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/psql/: index.html
docs/python/: index.html
docs/r/: filter_lazy.out  get_table.out  index.html
docs/s01_intro/: index.html
docs/s02_core/: admin_commands.sql.html  index.html  (+39 more)
info/: links.yml
s01_intro/: index.md
s02_core/: index.md
s03_tools/: index.md
s04_advanced/: index.md
s04_python/: builder.out  builder_relation.out  index.md  orm.out
s05_advanced/: index.md  upsert.out
s05_python/: Makefile  index.md
s06_r/: index.md
s07_psql/: index.md
s08_finale/: index.md
src/: index.md
templates/: page.html
(+143 files in other folders)
